--- a/index.html
+++ b/index.html
@@ -11,13 +11,7 @@
     <nav class="nav">
       <div class="c-nav o-container">
         <a href="#" target="_blank">
-          <img
-            src="images/logo.webp"
-            alt="logo"
-            width="170"
-            height="24"
-            class="c-nav__logo"
-          />
+          Tim
         </a>
         <ul class="c-nav__list">
           <li class="c-nav__item">
