--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
       <section class="c-timeline">
         <h2 class="c-skills__title">Timeline</h2>
         <article class="c-article">
-          <h2 class="c-article__title">Python</h2>
-          <p class="c-article__text">Favorite programming language. Almost all my own projects are in Python. This is than also the language I'm  most profecient with</p>
+          <h2 class="c-article__title">College</h2>
+          <p class="c-article__text">Currently studying in howest</p>
           <div class="c-article-links">
             <a class="c-article-links__link" href="">example</a>
             <a class="c-article-links__link" href="vakken.html">more info</a>
@@ -70,6 +70,22 @@
         <article class="c-article">
           <h2 class="c-article__title">Data Science</h2>
           <p class="c-article__text">Using Excel and Python (pandas, seaborn,...) I analysed data and also made some predictions using different techniques (Moving average, Lineair Regression, Some basic AI)</p>
+          <div class="c-article-links">
+            <a class="c-article-links__link" href="">example</a>
+            <a class="c-article-links__link" href="vakken.html">more info</a>
+          </div>
+        </article>
+        <article class="c-article">
+          <h2 class="c-article__title">Full Stack</h2>
+          <p class="c-article__text">Here I learned to make an enitre funcioning website using Flask. Here we also went in to using javascript for making responsive html.</p>
+          <div class="c-article-links">
+            <a class="c-article-links__link" href="">example</a>
+            <a class="c-article-links__link" href="vakken.html">more info</a>
+          </div>
+        </article>
+        <article class="c-article">
+          <h2 class="c-article__title">Data Managment</h2>
+          <p class="c-article__text">Here we learned everything about MySQL. Going from selecting sql querys up to making schemes. From schemes I'm able to set up a database. FOr most of the project we started from an already existing databse.</p>
           <div class="c-article-links">
             <a class="c-article-links__link" href="">example</a>
             <a class="c-article-links__link" href="vakken.html">more info</a>
