--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header class="c-header" id="mooi">
       <div class="o-container">
         <div class="c-header__container">
-          <h1 class="c-header__title">Portfolio of Tim Bleuze</h1>
+          <h1 class="c-header__title">Portfolio of Tim Bleuze (Still being busy building it)</h1>
           <p class="c-header__text">
             Here you can find a lot about me. Going from projects to my educational/work timeline, my own story/motives and other info. Pretty much an online CV.
           </p>
