Commentary, Changes CSS + HTML

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/css.css" />
   </head>
   <body>
+
+    <!-- Nav part -->
     <nav class="nav">
       <div class="c-nav o-container">
         <a href="#" target="_blank">
@@ -30,10 +32,11 @@
       </div>
     </nav>
 
+    <!-- Header html part -->
     <header class="c-header" id="mooi">
       <div class="o-container">
         <div class="c-header__container">
-          <h1 class="c-header__title">Portfolio of Tim Bleuze (Still being busy building it)</h1>
+          <h1 class="c-header__title">Portfolio of Tim Bleuze (Still busy building it)</h1>
           <p class="c-header__text">
             Here you can find a lot about me. Going from projects to my educational/work timeline, my own story/motives and other info. Pretty much an online CV.
           </p>
@@ -46,6 +49,8 @@
       </div>
     </header>
     <main class="o-container">
+
+      <!-- Timeline section of the html -->
       <section class="c-timeline">
         <h2 class="c-skills__title">Timeline</h2>
         <article class="c-article">
@@ -57,6 +62,8 @@
           </div>
         </article>
       </section>
+
+      <!-- Skills sction of the html -->
       <section id="skills" class="c-skills">
         <h2 class="c-skills__title">Skills</h2>
         <article class="c-article">
@@ -125,6 +132,8 @@
         </article>
       </section>
       <section class="c-overige">
+
+        <!-- other info of the html -->
         <h2 class="c-skills__title">Other Info</h2>
         <article class="c-article">
           <h2 class="c-article__title">Personal Projects</h2>
