--- a/index.html
+++ b/index.html
@@ -8,13 +8,10 @@
     <link rel="stylesheet" href="css/css.css" />
   </head>
   <body>
-
     <!-- Nav part -->
     <nav class="nav">
       <div class="c-nav o-container">
-        <a href="#" target="_blank">
-          Tim
-        </a>
+        <a href="#" target="_blank"> Tim </a>
         <ul class="c-nav__list">
           <li class="c-nav__item">
             <a class="c-nav__link c-nav__link" href="#mooi">Info</a>
@@ -36,29 +33,40 @@
     <header class="c-header" id="mooi">
       <div class="o-container">
         <div class="c-header__container">
-          <h1 class="c-header__title">Portfolio of Tim Bleuze (Still busy building it)</h1>
+          <h1 class="c-header__title">
+            Portfolio of Tim Bleuze (Still busy building it)
+          </h1>
           <p class="c-header__text">
-            Here you can find a lot about me. Going from projects to my educational/work timeline, my own story/motives and other info. Pretty much an online CV.
+            Here you can find a lot about me. Going from projects to my
+            educational/work timeline, my own story/motives and other info.
+            Pretty much an online CV.
           </p>
         </div>
 
         <div class="c-header__button">
-          <a href="#onderdelen" class="c-header__button--link"> Let's find out</a>
+          <a href="#onderdelen" class="c-header__button--link">
+            Let's find out</a
+          >
         </div>
         <div class="c-header__caption">&copy; Tim Bleuze</div>
       </div>
     </header>
     <main class="o-container">
-
       <!-- Timeline section of the html -->
       <section class="c-timeline">
-        <h2 class="c-skills__title">Timeline</h2>
-        <article class="c-article">
-          <h2 class="c-article__title">College</h2>
-          <p class="c-article__text">Currently studying in howest</p>
-          <div class="c-article-links">
-            <a class="c-article-links__link" href="">example</a>
-            <a class="c-article-links__link" href="vakken.html">more info</a>
+        <h2 class="c-timeline__title">Timeline</h2>
+        <article class="c-timeline-article">
+          <div class="c-timeline-article__div">
+            <h2 class="c-timeline-article__title">High School</h2>
+            <p class="c-timeline-article__text">
+              Currently studying in howest (2022-...)
+            </p>
+          </div>
+          <div class="c-timeline-article__div"></div>
+            <h2 class="c-timeline-article__title">College</h2>
+            <p class="c-timeline-article__text">
+              Currently studying in howest (2022-...)
+            </p>
           </div>
         </article>
       </section>
@@ -68,7 +76,10 @@
         <h2 class="c-skills__title">Skills</h2>
         <article class="c-article">
           <h2 class="c-article__title">Python</h2>
-          <p class="c-article__text">Favorite programming language. Almost all my own projects are in Python. This is than also the language I'm  most profecient with</p>
+          <p class="c-article__text">
+            Favorite programming language. Almost all my own projects are in
+            Python. This is than also the language I'm most profecient with
+          </p>
           <div class="c-article-links">
             <a class="c-article-links__link" href="">example</a>
             <a class="c-article-links__link" href="vakken.html">more info</a>
@@ -76,7 +87,11 @@
         </article>
         <article class="c-article">
           <h2 class="c-article__title">Data Science</h2>
-          <p class="c-article__text">Using Excel and Python (pandas, seaborn,...) I analysed data and also made some predictions using different techniques (Moving average, Lineair Regression, Some basic AI)</p>
+          <p class="c-article__text">
+            Using Excel and Python (pandas, seaborn,...) I analysed data and
+            also made some predictions using different techniques (Moving
+            average, Lineair Regression, Some basic AI)
+          </p>
           <div class="c-article-links">
             <a class="c-article-links__link" href="">example</a>
             <a class="c-article-links__link" href="vakken.html">more info</a>
@@ -84,7 +99,10 @@
         </article>
         <article class="c-article">
           <h2 class="c-article__title">Full Stack</h2>
-          <p class="c-article__text">Here I learned to make an enitre funcioning website using Flask. Here we also went in to using javascript for making responsive html.</p>
+          <p class="c-article__text">
+            Here I learned to make an enitre funcioning website using Flask.
+            Here we also went in to using javascript for making responsive html.
+          </p>
           <div class="c-article-links">
             <a class="c-article-links__link" href="">example</a>
             <a class="c-article-links__link" href="vakken.html">more info</a>
@@ -92,7 +110,12 @@
         </article>
         <article class="c-article">
           <h2 class="c-article__title">Data Managment</h2>
-          <p class="c-article__text">Here we learned everything about MySQL. Going from selecting sql querys up to making schemes. From schemes I'm able to set up a database. FOr most of the project we started from an already existing databse.</p>
+          <p class="c-article__text">
+            Here we learned everything about MySQL. Going from selecting sql
+            querys up to making schemes. From schemes I'm able to set up a
+            database. FOr most of the project we started from an already
+            existing databse.
+          </p>
           <div class="c-article-links">
             <a class="c-article-links__link" href="">example</a>
             <a class="c-article-links__link" href="vakken.html">more info</a>
@@ -100,7 +123,11 @@
         </article>
         <article class="c-article">
           <h2 class="c-article__title">Frontend</h2>
-          <p class="c-article__text">Using HTML and (S)CSS I've made this site and also several other sites for school assignments. I also used Adobe XD to design and brainstorm about this site</p>
+          <p class="c-article__text">
+            Using HTML and (S)CSS I've made this site and also several other
+            sites for school assignments. I also used Adobe XD to design and
+            brainstorm about this site
+          </p>
           <div class="c-article-links">
             <a class="c-article-links__link" href="">example</a>
             <a class="c-article-links__link" href="vakken.html">more info</a>
@@ -108,7 +135,11 @@
         </article>
         <article class="c-article">
           <h2 class="c-article__title">Prototyping</h2>
-          <p class="c-article__text">With the help of an Arduino (based on C) I've made several small programs and learned how to safely make and design small electronic circuits</p>
+          <p class="c-article__text">
+            With the help of an Arduino (based on C) I've made several small
+            programs and learned how to safely make and design small electronic
+            circuits
+          </p>
           <div class="c-article-links">
             <a class="c-article-links__link" href="">example</a>
             <a class="c-article-links__link" href="vakken.html">more info</a>
@@ -116,7 +147,11 @@
         </article>
         <article class="c-article">
           <h2 class="c-article__title">Computer Networks</h2>
-          <p class="c-article__text">Here I learned the basis of an SOHO network and the basis of a good working network in bigger environments. Apart from this we also learned how to set up a small router and web server</p>
+          <p class="c-article__text">
+            Here I learned the basis of an SOHO network and the basis of a good
+            working network in bigger environments. Apart from this we also
+            learned how to set up a small router and web server
+          </p>
           <div class="c-article-links">
             <a class="c-article-links__link" href="">example</a>
             <a class="c-article-links__link" href="vakken.html">more info</a>
@@ -124,7 +159,11 @@
         </article>
         <article class="c-article">
           <h2 class="c-article__title">Personal Projects</h2>
-          <p class="c-article__text">My personal projects are mainly written in Python using several library's. A lot of these aren't completed yet and will never be completed.</p>
+          <p class="c-article__text">
+            My personal projects are mainly written in Python using several
+            library's. A lot of these aren't completed yet and will never be
+            completed.
+          </p>
           <div class="c-article-links">
             <a class="c-article-links__link" href="">example</a>
             <a class="c-article-links__link" href="vakken.html">more info</a>
@@ -132,12 +171,15 @@
         </article>
       </section>
       <section class="c-overige">
-
         <!-- other info of the html -->
         <h2 class="c-skills__title">Other Info</h2>
         <article class="c-article">
           <h2 class="c-article__title">Personal Projects</h2>
-          <p class="c-article__text">My personal projects are mainly written in Python using several library's. A lot of these aren't completed yet and will never be completed.</p>
+          <p class="c-article__text">
+            My personal projects are mainly written in Python using several
+            library's. A lot of these aren't completed yet and will never be
+            completed.
+          </p>
           <div class="c-article-links">
             <a class="c-article-links__link" href="">example</a>
             <a class="c-article-links__link" href="vakken.html">more info</a>
