Little mistake in a on vakken.html

--- a/vakken.html
+++ b/vakken.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     Hier komen de vakken later
-    <a href="#index.html">Back to index</a>
+    <a href="index.html">Back to index</a>
 </body>
 </html>
