added github links

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             Python. This is than also the language I'm most profecient with
           </p>
           <div class="c-article-links">
-            <a class="c-article-links__link" href="">example</a>
+            <a class="c-article-links__link" target="_blank" href="https://github.com/Strotmic/Projects/tree/main/Python_1ejaar">example</a>
             <a class="c-article-links__link" href="vakken.html">more info</a>
           </div>
         </article>
@@ -93,7 +93,7 @@
             average, Lineair Regression, Some basic AI)
           </p>
           <div class="c-article-links">
-            <a class="c-article-links__link" href="">example</a>
+            <a class="c-article-links__link" target="_blank" href="https://github.com/Strotmic/Projects/tree/main/Data_Science_1ejaar">example</a>
             <a class="c-article-links__link" href="vakken.html">more info</a>
           </div>
         </article>
@@ -104,7 +104,7 @@
             Here we also went in to using javascript for making responsive html.
           </p>
           <div class="c-article-links">
-            <a class="c-article-links__link" href="">example</a>
+            <a class="c-article-links__link" target="_blank" href="https://github.com/Strotmic/Projects/tree/main/Full_Stack_1ejaar">example</a>
             <a class="c-article-links__link" href="vakken.html">more info</a>
           </div>
         </article>
@@ -117,7 +117,7 @@
             existing databse.
           </p>
           <div class="c-article-links">
-            <a class="c-article-links__link" href="">example</a>
+            <a class="c-article-links__link" target="_blank" href="https://github.com/Strotmic/Projects/tree/main/Data_Managment_1ejaar">example</a>
             <a class="c-article-links__link" href="vakken.html">more info</a>
           </div>
         </article>
@@ -129,19 +129,19 @@
             brainstorm about this site
           </p>
           <div class="c-article-links">
-            <a class="c-article-links__link" href="">example</a>
+            <a class="c-article-links__link" target="_blank" href="https://github.com/Strotmic/Projects/tree/main/HTML_CSS_1ejaar">example</a>
             <a class="c-article-links__link" href="vakken.html">more info</a>
           </div>
         </article>
         <article class="c-article">
-          <h2 class="c-article__title">Prototyping</h2>
+          <h2 class="c-article__title">Prototyping / Sensors</h2>
           <p class="c-article__text">
-            With the help of an Arduino (based on C) I've made several small
+            With the help of an Arduino and Python (based on C) I've made several small
             programs and learned how to safely make and design small electronic
             circuits
           </p>
           <div class="c-article-links">
-            <a class="c-article-links__link" href="">example</a>
+            <a class="c-article-links__link" target="_blank" href="https://github.com/Strotmic/Projects/tree/main/Arduino_Sensors_1ejaar">example</a>
             <a class="c-article-links__link" href="vakken.html">more info</a>
           </div>
         </article>
@@ -153,7 +153,7 @@
             learned how to set up a small router and web server
           </p>
           <div class="c-article-links">
-            <a class="c-article-links__link" href="">example</a>
+            <a class="c-article-links__link" href="#">no example</a>
             <a class="c-article-links__link" href="vakken.html">more info</a>
           </div>
         </article>
