added personal prject folder

--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
           <p class="c-article__text">
             My personal projects are mainly written in Python using several
             library's. A lot of these aren't completed yet and will never be
-            completed.
+            completed. This map is very chaotic (working on sorting it)
           </p>
           <div class="c-article-links">
-            <a class="c-article-links__link" href="">example</a>
+            <a class="c-article-links__link" href="https://github.com/Strotmic/_PythonProjects">example</a>
             <a class="c-article-links__link" href="vakken.html">more info</a>
           </div>
         </article>
