--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <!-- Nav part -->
     <nav class="nav">
       <div class="c-nav o-container">
-        <a href="#" target="_blank"> Tim </a>
         <ul class="c-nav__list">
           <li class="c-nav__item">
             <a class="c-nav__link c-nav__link" href="#mooi">Info</a>
@@ -59,7 +58,7 @@
           <div class="c-timeline-article__div">
             <h2 class="c-timeline-article__title">High School</h2>
             <p class="c-timeline-article__text">
-              Currently studying in howest (2022-...)
+              Last 2 years I studied Informatics at Kaai Kortrijk(2020-2022)
             </p>
           </div>
           <div class="c-timeline-article__div"></div>
@@ -165,7 +164,7 @@
             completed. This map is very chaotic (working on sorting it)
           </p>
           <div class="c-article-links">
-            <a class="c-article-links__link" href="https://github.com/Strotmic/_PythonProjects">example</a>
+            <a class="c-article-links__link" target="_blank" href="https://github.com/Strotmic/_PythonProjects">example</a>
             <a class="c-article-links__link" href="vakken.html">more info</a>
           </div>
         </article>
@@ -174,11 +173,9 @@
         <!-- other info of the html -->
         <h2 class="c-skills__title">Other Info</h2>
         <article class="c-article">
-          <h2 class="c-article__title">Personal Projects</h2>
+          <h2 class="c-article__title"></h2>
           <p class="c-article__text">
-            My personal projects are mainly written in Python using several
-            library's. A lot of these aren't completed yet and will never be
-            completed.
+
           </p>
           <div class="c-article-links">
             <a class="c-article-links__link" href="">example</a>
