--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Nav part -->
   <nav class="nav" id="top">
     <div class="c-nav o-container">
-      <a class="c-nav__link" href="#" target="_blank"> Home </a>
+      <a class="c-nav__link" href="#"> Home </a>
       <ul class="c-nav__list">
         <li class="c-nav__item">
           <a class="c-nav__link" href="#timeline">Timeline</a>
@@ -46,7 +46,7 @@
       </div>
 
       <div class="c-header__button">
-        <a href="#onderdelen" class="c-header__button--link">
+        <a href="#skills" class="c-header__button--link">
           Let's find out</a>
       </div>
       <div class="c-header__caption">&copy; Tim Bleuze</div>
