--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
         <div class="c-article-linksc">
           <a class="c-article-linksc__linkc" href="tel:+32 468 11 03 21">+32 468 11 03 21</a>
           <a href="https://www.linkedin.com/in/tim-bleuzé-718080214/?original_referer=" target="_blank" class="c-article-linksc__linkc"> Linkedin</a>
+          <a class="c-article-linksc__linkc" target="_blank" href="https://github.com/Strotmic">Github</a>
           <a class="c-article-linksc__linkc" target="_blank" href="mailto: tim.bleuze@outlook.com">Mail me</a>
         </div>
       </article>
