--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <h2 class="c-article__title">Python</h2>
         <p class="c-article__text">
           Favorite programming language. Almost all my own projects are in
-          Python. This is than also the language I'm most profecient with
+          Python. This is than also the language I'm most profecient with.
         </p>
         <div class="c-article-links">
           <a class="c-article-links__link" target="_blank"
@@ -93,7 +93,7 @@
         <p class="c-article__text">
           Using Excel and Python (pandas, seaborn,...) I analysed data and
           also made some predictions using different techniques (Moving
-          average, Lineair Regression, Some basic AI)
+          average, Lineair Regression, Some basic AI).
         </p>
         <div class="c-article-links">
           <a class="c-article-links__link" target="_blank"
@@ -104,8 +104,8 @@
       <article class="c-article">
         <h2 class="c-article__title">Full Stack</h2>
         <p class="c-article__text">
-          Here I learned to make an enitre funcioning website using Flask.
-          Here we also went in to using javascript for making responsive html.
+          Here I learned to make an enitre functioning website using Flask.
+          Here we also went into using javascript for making responsive html.
         </p>
         <div class="c-article-links">
           <a class="c-article-links__link" target="_blank"
@@ -118,8 +118,8 @@
         <p class="c-article__text">
           Here we learned everything about MySQL. Going from selecting sql
           querys up to making schemes. From schemes I'm able to set up a
-          database. FOr most of the project we started from an already
-          existing databse.
+          database. For most of the project we started from an already
+          existing database.
         </p>
         <div class="c-article-links">
           <a class="c-article-links__link" target="_blank"
@@ -132,7 +132,7 @@
         <p class="c-article__text">
           Using HTML and (S)CSS I've made this site and also several other
           sites for school assignments. I also used Adobe XD to design and
-          brainstorm about this site
+          brainstorm about this site.
         </p>
         <div class="c-article-links">
           <a class="c-article-links__link" target="_blank"
@@ -143,7 +143,7 @@
       <article class="c-article">
         <h2 class="c-article__title">Prototyping / Sensors</h2>
         <p class="c-article__text">
-          With the help of an Arduino and Python (based on C) I've made several small
+          With the help of an Arduino (based on C) and PythonI've made several small
           programs and learned how to safely make and design small electronic
           circuits
         </p>
@@ -156,9 +156,9 @@
       <article class="c-article">
         <h2 class="c-article__title">Computer Networks</h2>
         <p class="c-article__text">
-          Here I learned the basis of an SOHO network and the basis of a good
+          Here I learned the basis of a SOHO network and the basis of a good
           working network in bigger environments. Apart from this we also
-          learned how to set up a small router and web server
+          learned how to set up a small router and web server.
         </p>
         <div class="c-article-links">
           <a class="c-article-links__link" href="#">no example</a>
