--- a/vakken.html
+++ b/vakken.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Information</title>
+    <link rel="stylesheet" href="css/css.css">
 </head>
 <body>
-    Hier komen de vakken later
-    <a href="index.html">Back to index</a>
+    <nav class="nav" id="top">
+        <div class="c-nav o-container">
+          <a class="c-nav__link" href=""> Home </a>
+          <ul class="c-nav__list">
+            <li class="c-nav__item">
+              <a class="c-nav__link" href="#timeline">Timeline</a>
+            </li>
+            <li class="c-nav__item">
+              <a class="c-nav__link" href="#skills">Skills</a>
+            </li>
+            <li class="c-nav__item">
+              <a class="c-nav__link" href="#other">Other Info</a>
+            </li>
+            <li class="c-nav__item">
+              <a class="c-nav__link" href="#contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
 </body>
 </html>
