--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     UNDER CONSTRUCTION
-    de voorlopige website <a href="test_index.html"></a>
+    de voorlopige website <a href="test_index.html">hier</a>
 </body>
 </html>
